# BullShit

./: AI_M.java  AI_M_eazy_.java  BankingSystem.cpp  BankingSystem_c++.cpp  BankingSystem_java.java  BankingSystem_python.py  BarFilling.java  CMakeLists.txt  Crazy.cpp  Game.h  IPindicator.html  Math.cpp  OpeningScreen.h  Personal_Finance_Tracker.cpp  PetRockGui.java  Player.cpp  QuestionAnsweringSystem.java  README.md  SnakeGame.java  TypeDS.java  bank  calculator.c++  crazy  first.asm  holder.h  main.cpp  pft  practice.asm  ptf  reminderToPython.py  str  string.cpp
Communication/: Client.java  Server.java  TicTacToe.java  tictactow.java
GamaCl/: gamma.cpp  runner
GameC++/: Game.cpp  Game.h  Math.h  OpeningScreen.cpp  OpeningScreen.h  Player.h  README.md  gameGitLink  holder.h  main.cpp
Kinematics/: Main.java
Personal_Finance_Tracker/: Personal_Finance_Tracker.cpp  info.txt  pft
SFML/: Makefile
School_Management_System/: Grade.java  Main.java  Student.java
SnakeGame/: SnakeGame.java
StarbuksWeb/Calculator/: index.html  style.css
StarbuksWeb/Flipping  Text/: index.html  style.css
StarbuksWeb/Navigation Menu/: index.html  style.css
webSite/coastline-main/: coastline.html  contact.html  product.html  send_email.php
